diesel_compile_tests/tests/ui/belongs_to_second_parent.stderr
warning: belongs_to takes a single parent. Change
    belongs_to(Parent1, Parent2)
to
    belongs_to(Parent1)
    belongs_to(Parent2)
  --> $DIR/belongs_to_second_parent.rs:23:19
   |
23 | #[belongs_to(Bar, Baz)]
   |                   ^^^

error[E0433]: failed to resolve: use of undeclared type or module `foos`
  --> $DIR/belongs_to_second_parent.rs:24:8
   |
24 | struct Foo {
   |        ^^^ use of undeclared type or module `foos`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
